[package]
name = "wg-wiretap"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
# TODO: replace with https://github.com/ebfull/pcap when tokio bug is merged
pcap = { git = "https://github.com/DanielRussell/pcap", branch = "tokio_clear_ready", features = ["capture-stream"] }
etherparse = "0.9.0"
tokio = { version = "1.9.0", features = ["full"] }
futures-batch = "0.6.0"
futures = "0.3"
structopt = "0.3"
serde = {version = "1.0.130", features = ["derive"]}
dns-parser = "0.8.0"
base64 = "0.13.0"
sentry = {version = "0.23.0", default_features=false, features=["reqwest", "rustls"]}
mongodb = "2.0.1"
bson = "2.0.1"